reset unwanted changes